fixed broken issue on chrome and moved sponsored articles to right on desktop, and higher on mobile

--- a/styles/sass/base/_common.sass
+++ b/styles/sass/base/_common.sass
@@ -59,3 +59,16 @@ button
     margin: 1em 0
     padding: 0
 
+.desktop-only
+  +respond-to(medium)
+    display: none
+
+.mobile-only
+  +respond-to(schmedium)
+    display: block
+
+.tablet-and-below-only
+  display: none
+  +respond-to(medium)
+    display: block
+
